    * TagLib-Extras 1.0.0 is now required. This release is compatible with the
      new TagLib 1.6 release.
    * Remove non working menu entry "rename" from the Bookmark Manager. This
      functionality is no longer needed as inline renaming is possible.
    * Improvements for volume widget in ToolbarNG.
    * Added "Lock layout" option to the main window's context menu.    

  BUGFIXES:
    * Do not show the "load" context action in the Bookmark Manager when more
      than 1 bookmark is selected.
    * Fixed "Create timecode track" menu entry not showing up in the Bookmark 
      Managers context menu when exactly 2 bookmarks are selected.
    * Fixed new track timecodes always getting shown at the very beginning of
      the progress slider until the track was reloaded.
    * Fixed some tracks not correctly loading timecodes due to url encoding 
      issues.
    * Fixed bookmark database tables not correctly getting created on first 
      run, leading to frequent sql errors.
    * Fix the ends of the active track indicator getting stretched badly on 
      wide playlists
    * Only one toolbar type will be enabled at any time (Toolbar or ToolbarNG).
      Previously both could be enabled concurrently by accident.
    * Multiple fixes for the Track Timecode popups. They are no longer truncated
      if there is not enough space to the right and the issue with them getting 
      "stuck" has also been fixed. Thanks to Simon Bühler 
      <simon@aktionspotential.de> for this patch. (BR 196924)
    * Do not crash when removing a track with no album from the playlist while
      the repeat album navigator is active. (BR 207427)


VERSION 2.2-beta2
  FEATURES:
    * Added DBus methods Forward and Backward for relative seeking (BR 206028)
      and PlayPause for toggling pause state (patches by Michael Zanetti
      <michael_zanetti@gmx.net>).

  CHANGES:
    * Grouping mode has been merged into the playlist layouts so each layout